@@ -1,4 +1,5 @@
 [1.3.2]
+- API Change: removed default constructor of DecalBatch, removed DefaultGroupStrategy
 - Updated to latests RoboVM release, 1.0.0-alpha-02, please update your RoboVM plugins/installations
 - Reduced I18NBundle loading times on Android and bypassed unclosed stream on iOS. 
 - Removed the gdx-ai extension from the libGDX repository. Now it lives in its own repository under the libGDX umbrella, see https://github.com/libgdx/gdx-ai
